[package]
name = "pyonji"
version = "0.1.0"
edition = "2024"

[features]
install = []

[dependencies]
anyhow = "1.0"
bumpalo = { version = "3.20.2", features = ["collections"] }
bytemuck = { version = "1.16", features = ["derive"] }
cansi = "2.2.1"
etagere = "0.2.15"
swash = "0.2.6"
pollster = "0.4"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
vt100 = "0.16.2"
wgpu = { version = "28.0.0", default-features = false, features = ["wgsl", "vulkan"] }
winit = "0.30"
unicode-segmentation = "1.12"
ahash = "0.8.12"
fontdb = "0.23.0"
image = "0.25.10"
clap = { version = "4.6.0", features = ["derive"] }
vswhom = "0.1.0"
clipboard = "0.5.0"
dirs = "6.0.0"
mlua = { version = "0.11.6", features = ["anyhow", "lua55", "macros", "mlua_derive", "send", "userdata-wrappers", "vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
notify = "8.2.0"

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.3"
winapi = { version = "0.3.9", features = ["handleapi", "memoryapi", "processthreadsapi", "winnt"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.30"
