[package]
name = "pyonji"
version = "0.1.0"
edition = "2024"

[features]
install = []

[dependencies]
anyhow = "1.0"
bumpalo = { version = "3.20.2", features = ["collections"] }
bytemuck = { version = "1.16", features = ["derive"] }
cansi = "2.2.1"
etagere = "0.2.15"
swash = "0.2.6"
pollster = "0.4"
portable-pty = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
vt100 = "0.16.2"
wgpu = { version = "29.0.4", default-features = false, features = ["wgsl", "vulkan"] }
winit = "0.30"
unicode-segmentation = "1.12"
ahash = "0.8.12"
fontdb = "0.23.0"
image = "0.25.10"
clap = { version = "4.6.0", features = ["derive"] }
vswhom = "0.1.0"
clipboard = "0.5.0"
dirs = "6.0.0"
mlua = { version = "0.11.6", features = ["anyhow", "lua55", "macros", "mlua_derive", "send", "userdata-wrappers", "vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
notify = "8.2.0"
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
git-version = "0.3.9"
const_format = "0.2.36"
nucleo-matcher = "0.3.1"
ratatui = { version =  "0.30.2", features = ["unstable-backend-writer"] }
ratatui-textarea = { version = "0.9.2" }
crossterm = { version = "0.29.0", default-features = false, features = ["derive-more", "bracketed-paste", "events"] }
unicode-width = "0.2.2"
self_update = { git = "https://github.com/jaemk/self_update", features = ["async"], rev = "63cbf45751b440cbfe008d80ee9ed0f1b4f56112" }
reqwest = { version = "0.13.4", features = ["json"] }
smol = "2.0.2"
futures = "0.3.32"
futures-util = "0.3.32"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.16"
async-compat = "0.2.5"
serde_json = "1.0.150"
tempfile = "3.27.0"
self-replace = "1.5.0"
ratatui-explorer = { version = "0.3.0", default-features = false }
either = "1.16.0"
ssh2 = "0.9.6"
mio = { version = "1.2.2", features = ["net", "os-poll"] }
smallvec = "1.15.2"
path-absolutize = "4.0.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.30"
